--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,11 @@ Pillow==5.1.0
 pyemd==0.5.1
 resampy==0.2.0
 scikit-image==0.13.1
-scikits.audiolab==0.11.0
+# scikits.audiolab==0.11.0
 scipy==1.1.0
 tensorflow-gpu==1.4.0rc1
+# tensorflow==1.4.0rc1
 youtube-dl==2017.11.15
+SoundFile~=0.10.3.post1
+scikit-learn~=0.20.4
+matplotlib~=2.2.5
